# Embedded-Project

./: CMakeLists.txt  CONTRIBUTING.md  README.md
Arduino/Accelarometer/: Accelarometer to glow led.ino
Arduino/Arduino Calculator/: calculation_using_keypad_and_lcd1.ino
Arduino/Arduino RFID Servo/: RFID Connection.avif
Arduino/Display Ultrasonic Sensor Distance/: Components.csv
Arduino/FOOD_SERVING_ROBOT/: BLUETOOTH CAR CONNECTION.txt  FOOD_SERVING_ROBOT.ino
Arduino/Gas_Sensor/: Gas_Sensor.ino
Arduino/INTRUDER ALERTING SYSTEM/: INTRUDERALERTINGSYSTEM .txt
Arduino/IR LINE FOLLOWER/: line_following_4_way_tracing_sensor.ino
Arduino/Keypad LCD Display Interface/: Components.csv  keypad display interface.ino  keypad_number_display_on_serial_display1.ino
Arduino/Matrix LED Library/ROBOMIRACLE_WELCOME_WITH_ROBOT_EYE/: ROBOMIRACLE_WELCOME_WITH_ROBOT_EYE.ino
Arduino/PIR Sensor Motion Detector/: Components.csv
Arduino/PIR Sensor Motion Detector/pir_motion_detection_Serial/: pir_motion_detection_Serial.ino
Arduino/Password Tester/: Comp.csv  password_tester1.ino
Arduino/Rain Detection and alarming/rain_sensor/: rain_sensor.ino
Arduino/SOIL_MOISTURE_WATER_PUMP/soil_moisture_sensor/: Soil Moisture Sensor.txt  soil_moisture_sensor.ino
Arduino/Servo Position LCD Display/: Components.csv  servo_position_lcd_display1.ino
Arduino/Servo_Consistancy_Master/: Servo_Consistancy_Master.ino
Arduino/WATER_TANK_AUTOMATIC/: WATER_TANK_AUTOMATIC.ino
Arduino/WATER_TANK_LEVEL DETECTION/WATER_TANK_WITH_PUMP/: WATER_TANK_WITH_PUMP.ino
Arduino/WIFI Node MCU/: NODEMCU.txt
Arduino/Water_Tank/: Water_Tank.ino
docs/: ARCHITECTURE.md  SETUP.md
(+9 files in other folders)
